# password-manager

./: package-lock.json  package.json  run.sh
app/extension/: .gitignore  nodemon.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/extension/src/: config.ts  manifest.config.ts  network.ts  tailwind.css
app/extension/src/assets/: EllipsisVertical.svelte  LockIcon.svelte  Menu.svelte  PlusIcon.svelte
app/extension/src/background/: index.ts  storageHandler.ts  userData.ts  vaultManager.ts
app/extension/src/common/: browserMessages.ts  loginPage.ts
app/extension/src/components/: Button.svelte  Input.svelte  InputButton.svelte  Link.svelte  Loader.svelte  Options.svelte  Overlay.svelte  QuickPopup.svelte  types.ts
app/extension/src/content/: Prompt.svelte  fillForm.ts  getToken.ts  index.ts  indexOLD.ts  list.ts  save.ts
app/extension/src/input/: AccountsList.svelte  InputButton.svelte
app/extension/src/menu/: AccountsList.svelte
app/extension/src/options/: Options.svelte  index.ts  options.html
app/extension/src/popup/: AccountEditor.svelte  Login.svelte  index.ts  (+2 more)
app/web/: package-lock.json  package.json  wrangler.jsonc
app/web/src/: app.css  app.html  config.ts
backend/: .env.template  .gitignore  Cargo.toml  nodemon.json
backend/src/: cors.rs  jwt.rs  main.rs  server.rs
backend/src/api/: accounts.rs  mod.rs  response.rs  test.rs
backend/src/database/: accounts.rs  init.rs  mod.rs
backend/src/tests/: accounts.rs  authentication.rs  database.rs  encryption.rs  mod.rs  requests.rs
(+24 files in other folders)
