[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
bcrypt = "0.17"
uuid = {version = "1.16.0", features = ["v4"]}
dotenv = "0.15.0"
anyhow = "1.0.97"

[dependencies.chrono]
version = "0.4.40"
features = ["serde"]

[dependencies.sqlx]
version = "0.8.3"
features = ["postgres", "macros", "chrono", "migrate",  "runtime-tokio", "tls-native-tls", "derive"]

