[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.2"
dotenv = "0.15.0"
anyhow = "1.0.98"
fake = "4.3.0"
base64 = "0.22.1"
rand = "0.9.1"
sha2 = "0.10.8"
argon2 = "0.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = {version = "0.8.5", features = ["postgres", "macros", "chrono", "migrate",  "runtime-tokio", "tls-rustls-ring-webpki", "derive"]}
crypto-common = "0.1.6"
hmac = "0.12.1"
jwt-simple = "0.12.12"

